--- a/pyviewgui/statics/default_html.html
+++ b/pyviewgui/statics/default_html.html
@@ -1,164 +1,154 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>PyViewGUI 应用</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>pyviewgui App</title>
     <style>
-        * {
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
-            background: linear-gradient(135deg, #f5f7fa 0%, #e4edf9 100%);
-            color: #333;
+            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
             min-height: 100vh;
-            padding: 2rem 1rem;
             display: flex;
-            flex-direction: column;
-            align-items: center;
             justify-content: center;
+            align-items: center;
+            color: #333;
         }
 
         .container {
             max-width: 800px;
-            width: 100%;
+            width: 90%;
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+        }
+
+        .header {
+            background: #4a6fa5;
+            color: white;
+            padding: 30px;
             text-align: center;
         }
 
-        .logo {
-            width: 80px;
-            height: 80px;
-            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
-            border-radius: 50%;
+        /* 替换文字logo为图片 */
+        .logo-container {
             display: flex;
-            align-items: center;
             justify-content: center;
-            margin: 0 auto 1.5rem;
-            color: white;
-            font-size: 2rem;
-            font-weight: bold;
+            align-items: center;
+            margin-bottom: 15px;
         }
 
-        h1 {
-            font-size: 2.5rem;
-            font-weight: 700;
-            margin-bottom: 1rem;
-            background: linear-gradient(90deg, #2575fc, #6a11cb);
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
+        .logo-img {
+            width: 64px;
+            height: 64px;
+            border-radius: 50%;
+            object-fit: cover;
+            object-position: center;
         }
 
-        p {
-            font-size: 1.1rem;
-            color: #555;
-            line-height: 1.6;
-            margin-bottom: 2.5rem;
-        }
-
-        .card-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-            gap: 1.5rem;
-            margin-bottom: 2.5rem;
-        }
-
-        .card {
-            background: white;
-            padding: 1.5rem;
-            border-radius: 16px;
-            box-shadow: 0 6px 16px rgba(0, 0, 0, 0.08);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .card:hover {
-            transform: translateY(-6px);
-            box-shadow: 0 10px 24px rgba(0, 0, 0, 0.12);
-        }
-
-        .card h3 {
-            font-size: 1.25rem;
-            margin: 0.75rem 0 0.5rem;
-            color: #2c3e50;
-        }
-
-        .card p {
-            font-size: 0.95rem;
+        .title {
+            font-size: 2em;
             margin: 0;
-            color: #7f8c8d;
-        }
-
-        button {
-            background: linear-gradient(135deg, #2575fc, #6a11cb);
-            color: white;
-            border: none;
-            padding: 0.85rem 2rem;
-            font-size: 1.1rem;
             font-weight: 600;
-            border-radius: 12px;
-            cursor: pointer;
-            transition: opacity 0.2s, transform 0.2s;
-            box-shadow: 0 4px 12px rgba(37, 117, 252, 0.3);
         }
 
-        button:hover {
-            opacity: 0.92;
-            transform: scale(1.03);
+        .content {
+            padding: 40px;
+            text-align: center;
         }
 
-        button:active {
-            transform: scale(1);
+        .description {
+            font-size: 1.2em;
+            line-height: 1.6;
+            margin-bottom: 30px;
+            color: #555;
         }
 
-        footer {
-            margin-top: 2rem;
-            color: #999;
-            font-size: 0.9rem;
+        .features {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            margin: 30px 0;
+        }
+
+        .feature-card {
+            background: #f8f9fa;
+            padding: 20px;
+            border-radius: 8px;
+            border-left: 4px solid #4a6fa5;
+        }
+
+        .feature-title {
+            font-weight: 600;
+            color: #4a6fa5;
+            margin-bottom: 8px;
+        }
+
+        .footer {
+            text-align: center;
+            padding: 20px;
+            background: #f8f9fa;
+            color: #666;
+            font-size: 0.9em;
+        }
+
+        @media (max-width: 600px) {
+            .header {
+                padding: 20px;
+            }
+
+            .content {
+                padding: 20px;
+            }
+
+            .title {
+                font-size: 1.5em;
+            }
         }
     </style>
 </head>
-<body>
-<div class="container">
-    <div class="logo">PY</div>
-    <h1>欢迎使用 PyViewGUI</h1>
-    <p>这是一个基于 Python 与本地 WebView 构建的现代化桌面应用界面。无需网络，安全高效。</p>
 
-    <div class="card-grid">
-        <div class="card">
-            <div style="font-size: 2rem;">⚡</div>
-            <h3>快速启动</h3>
-            <p>秒级加载，本地运行，无网络依赖。</p>
+<body>
+    <div class="container">
+        <div class="header">
+            <!-- 使用图片替代文字logo -->
+            <div class="logo-container">
+                <!-- 尝试多种路径引用方式 -->
+                <img src="default_icon.png" alt="pyviewgui Logo" class="logo-img" />
+            </div>
+            <h1 class="title">Welcome to pyviewgui</h1>
         </div>
-        <div class="card">
-            <div style="font-size: 2rem;">🔒</div>
-            <h3>数据安全</h3>
-            <p>所有数据保留在您的设备上。</p>
+        <div class="content">
+            <p class="description">
+                This is a desktop application powered by Python and Rust with web technologies.
+                It combines the power of Python backend with the flexibility of HTML/CSS frontend.
+            </p>
+
+            <div class="features">
+                <div class="feature-card">
+                    <div class="feature-title">Fast</div>
+                    <p>Built with Rust for maximum performance</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-title">Simple</div>
+                    <p>Easy to use Python API</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-title">Modern</div>
+                    <p>Web-based UI with HTML/CSS/JS</p>
+                </div>
+            </div>
+
+            <p>Start building your desktop application today!</p>
         </div>
-        <div class="card">
-            <div style="font-size: 2rem;">🎨</div>
-            <h3>美观界面</h3>
-            <p>现代设计，流畅交互体验。</p>
+        <div class="footer">
+            <p>Powered by pyviewgui - Python + Rust + Web Technologies</p>
         </div>
     </div>
-
-    <button id="startBtn">开始使用</button>
-
-    <footer>
-        © 2026 PyViewGUI 应用 · 本地运行
-    </footer>
-</div>
-
-<script>
-    document.getElementById('startBtn').addEventListener('click', () => {
-        // 这里可调用 pyviewgui 提供的 JS 接口，例如：
-        // window.pyviewgui?.call('on_start_clicked');
-
-        alert('✅ 操作已触发！\n（实际项目中将调用 Python 函数）');
-    });
-</script>
 </body>
+
 </html>
